--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+
 
 <head>
 	<meta charset="utf-8">
@@ -9,14 +9,14 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
-	<title>Chatting with an Astronaut</title>
+	<title id="title">Chatting with an Astronaut</title>
 	<link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 	<div class="title" id="title">
-		<h2>Hello, I'm an Astronaut.<br /> Say hi below</h2>
+		<h2 id="header1">Hello, I'm an Astronaut.<br /> Say hi below</h2>
 		<a><i class="fa fa-angle-double-down" style="font-size:48px"></i></a>
 	</div>
 
@@ -26,11 +26,13 @@
 		<br/>
 	</div>
 	<div class="knowledge">
-		<h2>Ask me Anything!</h2>
+		<h2 id="header2">Ask me Anything!</h2>
 		<input type="text" class="form-control" placeholder="Talk to me..." id="userInput">
 		<br />
 		<button type="button" class="btn btn-danger" id="send" onclick="whatSaid()" value="Reset Form">Chat</button>
-		<button type="button" class="btn btn-success" id="ideas" onclick="fillidea()">Give Idea</button>
+		
+		<button type="button" id="french" class="btn btn-danger" onclick="fren()">French</button>
+		<button type="button" id="english" class="btn btn-success" onclick="engl()">English</button>
 	</div>
 
 	<script src="main.js"></script>
