Bing Translate API

--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="title" id="title">
-		<h2 id="header1">Hello, I'm an Astronaut.<br /> Say hi below</h2>
+		<h2 id="header1">Hello, I'm an Astronaut. Say hi below</h2>
 		<a><i class="fa fa-angle-double-down" style="font-size:48px"></i></a>
 	</div>
 
@@ -30,9 +30,8 @@
 		<input type="text" class="form-control" placeholder="Talk to me..." id="userInput">
 		<br />
 		<button type="button" class="btn btn-danger" id="send" onclick="whatSaid()" value="Reset Form">Chat</button>
-		
-		<button type="button" id="french" class="btn btn-danger" onclick="fren()">French</button>
-		<button type="button" id="english" class="btn btn-success" onclick="engl()">English</button>
+		<button type="button" id="french" class= "btn btn-success" onclick="fren()">French</button>
+		<button type="button" id="english" class="btn btn-danger" onclick="engl()">English</button>
 	</div>
 
 	<script src="main.js"></script>
